welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:-4: error: Unmatched closing brace '}' ignored here
	}
        ^Balin:-3: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Balin:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^